--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "winston-email",
-  "version": "1.0.0",
+  "name": "winston-email2",
+  "version": "1.0.1",
   "description": "Winston transport to send email",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
